# orchestration

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ConnectWork_Case_Plan_of_Attack.md  ConnectWork_Case_Plan_of_Attack_FINAL.md  DEMO_RUNBOOK.md  LLM_UPGRADE_PLAN.md  LLM_UPGRADE_WORKSTREAMS.md  Makefile  README.md  WORKSTREAMS.md  demo-walkthrough.html  pyproject.toml
.claude/: launch.json
actions/: README.md  __init__.py  composer.py  engine.py  loop.py  personas.py  toolcards.py
api/: README.md  chat.py  docs_chat.py  export_openapi.py  lifecycle_events.py  main.py  models.py  orchestrator.py  presentation.py  staged_remediation.py  workproducts.py
brief/: README.md  __init__.py  synthesizer.py
context/: README.md  __init__.py  assembler.py
core/: demo.py  export_schemas.py  pipeline.py  schemas.py
corpus/: README.md  __init__.py
docs/: ACTION_LIFECYCLE.html  ACTION_LIFECYCLE.md  ACTION_LIFECYCLE_ASYNC_WORKSTREAMS.md  ACTION_LIFECYCLE_WALKTHROUGH_UPGRADE_PLAN.md  BEATS_7_8_ASYNC_WORKSTREAMS.md  BEATS_7_8_NARRATIVE_DECISION.md  BEATS_7_8_WALKTHROUGH_UPGRADE_PLAN.md  DEMO_BEATS_APPLY_DISCOUNT_TO_SEAL.md  FAQ_CORPUS_UPGRADE_PLAN.md  FAQ_UPGRADE_CONDUCTOR_PROMPTS.md  FAQ_UPGRADE_WORKSTREAMS.md  LIVE_STATUS_WIDGET.html  REVALIDATION_LIVE_PARITY_HANDOFF.md
evals/: README.md  __init__.py  action_adversarial.py  harness.py  integrations.py  judge.py  models.py  replay.py  run.py  runner.py  scorecard.py  scorers.py  taxonomy.py  telemetry_emit.py
fixtures/: acme.py
frontend/: .env.example  README.md  openapi.json  package.json
lifecycle/: README.md  __init__.py  revalidation.py
prompts/: claude_code_ws0.md  codex_wsc.md  llm_upgrade_ws_l0.md  llm_upgrade_ws_l1.md  llm_upgrade_ws_l2.md  llm_upgrade_ws_l3.md  (+3 more)
(+173 files in other folders)
