[project]
name = "connectwork-command-agent"
version = "0.1.0"
description = "ConnectWork Command Agent — governed work-orchestration prototype (Box case study)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "langgraph>=0.2",
  "langchain>=0.2",
  "anthropic>=0.40",
  "openai>=1.40",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "braintrust>=0.0.150", "wandb>=0.17"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
