[project]
name = "connectwork-command-agent"
version = "0.1.0"
description = "ConnectWork Command Agent — governed work-orchestration prototype (Box case study)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "langgraph>=0.2",
  "langchain>=0.2",
  "anthropic>=0.40",
  "openai>=1.40",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "braintrust>=0.0.150", "wandb>=0.17"]

# Flat multi-package layout: one importable package per workstream directory.
# Declared explicitly so `pip install -e .` does not fail on setuptools'
# multi-top-level-package auto-discovery. The `*` globs pick up any subpackages
# a workstream adds later (e.g. verification.rules) without touching this file.
[tool.setuptools.packages.find]
where = ["."]
include = [
  "core*", "fixtures*", "context*", "brief*", "actions*",
  "corpus*", "verification*", "lifecycle*", "telemetry*",
  "evals*", "recipes*",
]
exclude = ["tests*", "frontend*", "prompts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
